kubernetes/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sample-webhook-service
  labels:
    app: sample-webhook-service
webhooks:
  - name: devops.kubernetes.com
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        name: sample-webhook-service-svc
        namespace: default
        path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRJeE1EY3hPREl5TVRVME9Wb1hEVE14TURjeE56SXlNVFUwT1Zvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT3BLCnBOZ0tPYVVsTmc0M2JEdXhaazhsSlFZcWJUeHBIY0gyVHZjSU5WMjRGZ2IyVUYwc0lKV2d5enVQV1ZqQ0dTMlkKamEyUDZEOENkVFlvTnNlWVZ1aXZrQkVjNnVJSHdHT0RiK3A5YlF6bkRTSGJ6TWRydGJtQTQwcWRtNmtaUnBuZgp5M0R4V2VBNnRT [...]
